--- a/FriendlyChat/app/src/main/res/values/strings.xml
+++ b/FriendlyChat/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Friendly Chat</string>
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
+
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="default_notification_channel_name" translatable="true">News</string>
 </resources>
